# aperi-snippets

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  do_configure
.trunk/: trunk.yaml
for_each_testing/: CMakeLists.txt  README.md  do_configure
for_each_testing/include/: NodeProcessing.h
for_each_testing/src/: ElementProcessing.cpp  main.cpp
include/: Benchmarking.h  ElementProcessing.h  NodeProcessing.h
kokkos_basic/: CMakeLists.txt  README.md  build.sh  do_configure  main.cpp
kokkos_basic/src/: main.cpp
src/: Benchmarking.cpp  ElementProcessing.cpp  NodeProcessing.cpp  main.cpp
stk_ngp_basic/: .gitignore  CMakeLists.txt  README.md  do_configure  main.cpp  plot_benchmark.py
stk_ngp_basic/include/: Loop.h
stk_ngp_basic/src/: BasicTests.cpp  Loop.cpp  StateUpdate.cpp  main.cpp
